--- a/scripts/post_processing/rg_postprocessing_outline.Rmd
+++ b/scripts/post_processing/rg_postprocessing_outline.Rmd
@@ -5,6 +5,9 @@ date: "28/08/2021"
 output: html_document
 ---
 
+
+made some changes see below
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE,
                       comment=NA,
